syntax = "proto3";

package tech.ilink.verification.v1alpha1;

import "tech/ilink/verification/v1alpha1/verification.types.proto";

message GetAccessTokenRequest {
  string userId = 1;
}

message GetAccessTokenResponse {
  string accessToken = 1;
}

message VerifyIdentityRequest {
  message Identity {
    string firstName = 1;
    string lastName = 2;
    string middleName = 3;
    string dateOfBirth = 4;
    string nationality = 5;
    string countryOfBirth = 6;
    string countryOfResidence = 7;
    string reasonsForOpeningAnAccount = 8;
    string accountWillBeUsedFor = 9;
    string city = 10;
    string street = 11;
    string apartmentOrHouse = 12;
    string postalCode = 13;
  }

  Identity identity = 1;
}

message VerifyIdentityResponse {
  bool success = 1;
  string error = 2;
  string applicantId = 3;
}

message VerifyDocumentsRequest {
  message Document {
    DocumentType type = 1;
    bytes frontSide = 2;
    bytes backSide = 3;
  }

  string applicantId = 1;
  Document document = 2;
}

message VerifyDocumentsResponse {
  bool success = 1;
  string error = 2;
}

message VerifyAddressesRequest {
  message Address {
    bytes file = 1;
  }

  string applicantId = 1;
  repeated Address addresses = 2;
}

message VerifyAddressesResponse {
  bool success = 1;
  string error = 2;
}

message GetVerificationStatusRequest {
  string applicantId = 1;
}

message GetVerificationStatusResponse {
  VerificationStatus status = 1;
}
