syntax = "proto3";

package tech.ilink.verification.v1alpha1;

message AccessToken {
  string token = 1;
  string userId = 2;
}

enum DocumentType {
  PASSPORT = 0;
  ID_CARD = 1;
  RESIDENCE_PERMIT = 2;
}

enum VerificationStatus {
  PENDING = 0;
  SUCCESS = 1;
  CANCELLED = 2;
}
